fixing a typo in the footer
I spelled jekyll wrong. smh

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-        <p class="text">This site powered by <a href="http://jekyllrb.com">Jeckyll</a>
+        <p class="text">This site powered by <a href="http://jekyllrb.com">Jekyll</a>
       </div>
     </div>
 
